--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,7 +28,7 @@ jobs:
         # Username used to log in to a Docker registry. If not set then no login will occur
         username: frullah
         # Password or personal access token used to log in to a Docker registry. If not set then no login will occur
-        password: ${{secret.DOCKER_PASSWORD}}
+        password: ${{ secrets.DOCKER_PASSWORD }}
         # Server address of Docker registry. If not set then will default to Docker Hub
 #         registry: # optional
         # Docker repository to tag the image with
