--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,6 +21,7 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
+    - uses: actions/checkout@v2
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access itw
     - name: Build and push Docker images
       uses: docker/build-push-action@v1.1.0
