--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,7 +39,7 @@ jobs:
         # Comma-delimited list of tags. These will be added to the registry/repository to form the image's tags
 #         tags: # optional
         # Automatically tags the built image with the git reference as per the readme
-        tag_with_ref: truel
+        tag_with_ref: true
         # Automatically tags the built image with the git short SHA as per the readme
         tag_with_sha: true
         # Path to the build context
