--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,7 +35,7 @@ jobs:
         # Server address of Docker registry. If not set then will default to Docker Hub
 #         registry: # optional
         # Docker repository to tag the image with
-        repository: docker-rubocop
+        repository: frullah/docker-rubocop
         # Comma-delimited list of tags. These will be added to the registry/repository to form the image's tags
 #         tags: # optional
         # Automatically tags the built image with the git reference as per the readme
